Source/WebKit/UIProcess/WebPageProxy.h
@@ -937,7 +937,7 @@ public:
     void handleWheelEvent(const NativeWebWheelEvent&);
 
     bool isProcessingKeyboardEvents() const;
-    void handleKeyboardEvent(const NativeWebKeyboardEvent&);
+    bool handleKeyboardEvent(const NativeWebKeyboardEvent&);
 #if PLATFORM(WIN)
     void dispatchPendingCharEvents(const NativeWebKeyboardEvent&);
 #endif
